--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.jr</groupId>
+            <artifactId>jackson-jr-all</artifactId>
+            <version>2.18.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
